# FastAPI

./: pyproject.toml
task/: __main__.py  app.py  db.py  settings.py  table.py
task/api/: __init__.py  admin.py  user.py
task/models/: admin.py
task/script/: create_db.py
