[tool.poetry]
name = "task"
version = "0.1.0"
description = ""
authors = ["Sloth <rudo24@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
pydantic = "^1.9.1"
SQLAlchemy = "^1.4.39"
databases = {extras = ["postgresql"], version = "^0.6.0"}
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
